add Model test cases

--- a/server/config/localdev/cache.config
+++ b/server/config/localdev/cache.config
@@ -1,5 +1,11 @@
 {
     "general": {
         "user_info": { "level":0, "expired.1":600, "expired.2":86400 }
+    },
+    "test": {
+        "iam_a_cache_key_1": { "level":0 },
+        "iam_a_cache_key_2": { "level":1, "expired.1":1 },
+        "iam_a_cache_key_3": { "level":2 },
+        "iam_a_cache_key_4": { "level":0, "expired.1":0.2, "expired.2":1 }
     }
 }
