--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "dependencies": {
+    "del": "^2.2.2",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
     "weroll": "^1.0.18"
   },
