--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "del": "^2.2.2",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
+    "nodemailer": "^3.0.1",
     "weroll": "^1.0.21"
   },
   "devDependencies": {},
