--- a/server/config/localdev/cache.config
+++ b/server/config/localdev/cache.config
@@ -1,6 +1,7 @@
 {
     "general": {
-        "user_info": { "level":0, "expired.1":600, "expired.2":86400 }
+        "user_info": { "level":0, "expired.1":600, "expired.2":86400 },
+        "name": { "level":1, "expired.1":1 }
     },
     "test": {
         "iam_a_cache_key_1": { "level":0 },
